syntax="proto3";
option go_package = "./ipam";

service IPAM {
    rpc IPAcquire (IPAcquireRequest) returns (IPAcquireResponse);
    rpc IPRelease (IPReleaseRequest) returns (IPReleaseResponse);

    rpc NetworkAcquire (NetworkAcquireRequest) returns (NetworkAcquireResponse);
    rpc NetworkRelease (NetworkReleaseRequest) returns (NetworkReleaseResponse);
    rpc NetworkIsAvailable (NetworkAvailableRequest) returns (NetworkAvailableResponse);
}

message ResponseResult {
}

message IPAcquireRequest {
    string cidr = 1;
}

message IPAcquireResponse {
    string ip = 1;
    ResponseResult result = 2;
}

message IPReleaseRequest {
    string ip = 1;
    string cidr = 2;
}

message IPReleaseResponse {
    ResponseResult result = 1;
}

message NetworkAcquireRequest {
    string cidr = 1;
    bool immutable = 2; // If true, the network cannot be remapped. It will be allocated if available, or an error will be returned.
}

message NetworkAcquireResponse {
    string cidr = 1;
    ResponseResult result = 2;
}

message NetworkReleaseRequest {
    string cidr = 1;
}

message NetworkReleaseResponse {
    ResponseResult result = 1;
}

message NetworkAvailableRequest {
    string cidr = 1;
}

message NetworkAvailableResponse {
    bool available = 1;
    ResponseResult result = 2;
}
